[project]
name = "markpost"
version = "0.1.0"
description = "MCP server for syndicating Markdown content to social media and static blogs"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14,<3",
    "tweepy>=4.14",
    "httpx>=0.27",
    "boto3>=1.34",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markpost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
